# lkltools

./: IDEAS.md  README.md  cdp  cdp.sh  cf  cfn  change_git_branch  docker_volume_from  entrx  ezacol  fmove  go_pre_push  gpp  index.html  make_uv_pyproject  mfrn  mk_js_ts_project  mkbash  mkgit  mkjs  mkmise_config  mkpp  mkpy  mkpy_project  mkpypep  mkpypipenv  mkpyx  mkts  mkuvp  per  rcexec  ts_yarn_init  unmac  uswp  uswp.py  xre
.mise_files/: config.toml  enter_project.rc.template  leave_project.rc
fump/: Makefile  fump.py  pyproject.toml
oo/: pyproject.toml  unit.py
