[project]
name = "fump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Klemstein", email = "lklemstein@axway.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-coverage>=0.0",
]

[tool.pytest.ini_options]
pythonpath = "./src"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    'int: integration test',
    'unit: unit test',
]
