[project]
name = "oo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Klemstein", email = "lrsklemstein@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-coverage>=0.0",
]

[tool.pytest.ini_options]
pythonpath = "./src"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    'int: integration test',
    'unit: unit test',
]
